fixed right side white space issue on the meet us page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,6 +90,8 @@ h2 {
 /* Meet index.html */
 .meet-us {
     align-items: center;
+    padding: 10px;
+    margin: 10px;
 }
 
 /* Gallery*/
